# study-series-for-haskell

./: README.md
AI/azure-openai-haskell-init/: stack.yaml
AI/haskell-gpt/: .gitignore  LICENSE  Makefile  README.md  package.yaml  stack.yaml
AI/llm-safe/: .env.example  .stylish-haskell.yaml  Makefile  README.md  llm-safe.cabal  package.yaml  stack.yaml
AI/vanilla-rnn-init/: stack.yaml  vanilla-rnn-init.cabal
Books/learn-you-a-haskell/: stack.yaml
CLI/bfs-escape-maze/: stack.yaml
CLI/biggest-sum/: stack.yaml
CLI/check-number-three/: stack.yaml
CLI/coordinate-manipulate/: stack.yaml
CLI/coordinate-travel/: stack.yaml
CLI/csv-parser/: stack.yaml
CLI/defunctionalization/: stack.yaml
CLI/dfs-freeze-drinks/: stack.yaml
CLI/distance/: stack.yaml
CLI/dynamic-typing/: stack.yaml
CLI/file-finder/: file-finder.cabal  package.yaml
CLI/financial-validator/: README.md
CLI/functors/: stack.yaml
CLI/geometry/: README.md  stack.yaml
CLI/giving-the-change/: stack.yaml
CLI/greedy-coins/: stack.yaml
CLI/hashing/: stack.yaml
CLI/identicon/: stack.yaml
CLI/increasing-numbers/: stack.yaml
CLI/inverting-functions/: stack.yaml
CLI/ioref-counter/: stack.yaml
CLI/keep-biggest-card/: stack.yaml
CLI/korean-docx-parser/: stack.yaml
CLI/logging/: stack.yaml
CLI/map-traversal/: stack.yaml
CLI/monitoring-server/: stack.yaml
CLI/move-knight/: stack.yaml
CLI/moving-robot/: stack.yaml
CLI/mutable-ref/: stack.yaml
CLI/my-tag/: README.md  stack.yaml
CLI/no-zero-world/: README.md  stack.yaml
CLI/option-calculator/: stack.yaml
CLI/optional/: stack.yaml
CLI/palindromes/: stack.yaml
CLI/parallel-prime/: stack.yaml
CLI/parallel-using-par/: stack.yaml
CLI/pizza-store/: stack.yaml
CLI/run-length-encoding/: README.md  stack.yaml
CLI/stdin/: stack.yaml
CLI/threads/: stack.yaml
CLI/timeouts/: stack.yaml
CLI/todo-list/: stack.yaml
CLI/transactions/: stack.yaml
CLI/until-be-one/: stack.yaml
CLI/visitor-pattern/: stack.yaml
CLI/waiting-subway/: stack.yaml
CLI/web-crawler/: stack.yaml
CLI/words/: stack.yaml
Database/postgresql-persist-init/: Setup.hs  stack.yaml
Database/postgresql-simple-init/: stack.yaml
GUI/GiGtkApp/: GiGtkApp.cabal  Makefile  package.yaml
GUI/MonomerApp/: Makefile  MonomerApp.cabal  README.md  package.yaml  stack.yaml
GUI/MonomerTodo/: Makefile  MonomerTodo.cabal  package.yaml
GUI/ThreepennyAddress/: README.md  ThreepennyAddress.cabal  package.yaml
LSP/HaskellLSP/: CHANGELOG.md  HaskellLSP.cabal  README.md  package.yaml
Patterns/demo-Free-Monad-db/: README.md  (+2 more)
Web/azure-bicep-haskell-blog/: .dockerignore  .ghcid  .gitignore  DESIGN.md  Dockerfile  README.md  azure.yaml  cabal.project  docker-compose.yml  haskell-blog.cabal
Web/azure-bicep-haskell-blog/.github/workflows/: azure-dev.yml  ci.yml
Web/azure-bicep-haskell-blog/app/: Main.hs
Web/azure-bicep-haskell-blog/assets/: app.css  auth.css  org-editor.js  theme-init.js  theme-toggle.js
Web/azure-bicep-haskell-blog/infra/: main.bicep  main.json  main.parameters.json  resources.bicep
Web/azure-bicep-haskell-blog/scripts/: register-providers.ps1  register-providers.sh  run.ps1  run.sh
Web/azure-bicep-haskell-blog/src/Blog/: App.hs  Auth.hs  Config.hs  Database.hs  Email.hs  Keys.hs  Org.hs  Post.hs  Publish.hs  Routes.hs  User.hs  Verification.hs  View.hs
Web/azure-bicep-haskell-blog/src/Blog/App/: AuthRoutes.hs  Common.hs  PostRoutes.hs  ProfileRoutes.hs
Web/azure-bicep-haskell-blog/src/Blog/Email/: Acs.hs
Web/azure-bicep-haskell-blog/src/Blog/View/: Assets.hs
Web/azure-bicep-haskell-blog/test/: DerivingSpec.hs  DomainSpec.hs  OrgSpec.hs  RouteSpec.hs  SecuritySpec.hs  Spec.hs
Web/azure-bicep-haskell-luck/backend/: .stylish-haskell.yaml  cabal.project  luck-backend.cabal
Web/azure-bicep-haskell-luck/backend/app/: Main.hs
Web/azure-bicep-haskell-luck/backend/migrations/: 0001_init.sql  0002_admin_and_checklist.sql  0003_signup_verification.sql  0004_user_theme.sql  0005_verification_attempts.sql
Web/azure-bicep-haskell-luck/backend/src/Luck/: Api.hs  App.hs  Auth.hs  Authz.hs  Config.hs  DB.hs  Email.hs  Error.hs  Server.hs  Types.hs
Web/azure-bicep-haskell-luck/backend/src/Luck/Domain/: Admin.hs  Checklist.hs  Record.hs  Validation.hs
Web/azure-bicep-haskell-luck/backend/src/Luck/Handler/: Admin.hs  Auth.hs  Catalog.hs  Profile.hs  Record.hs  Util.hs
Web/azure-bicep-haskell-luck/backend/src/Luck/Repository/: Checklist.hs  Record.hs  User.hs  Verification.hs
Web/azure-bicep-haskell-luck/backend/src/Luck/Types/: Auth.hs  Checklist.hs  Common.hs  Record.hs  User.hs
Web/azure-bicep-haskell-luck/backend/src/Luck/Web/: Dto.hs  Error.hs  Middleware.hs
Web/yesod-haskell/: .gitignore  CLAUDE.md  README.md  demo-haskell.cabal
Web/yesod-haskell/.claude-plugin/: plugin.json
Web/yesod-haskell/app/: Main.hs
Web/yesod-haskell/commands/: commit.md  req.md
Web/yesod-haskell/config/: models.persistentmodels  routes.yesodroutes
Web/yesod-haskell/docs/: requirements.md  test-scenarios.md
Web/yesod-haskell/skills/consistency-check/: SKILL.md
Web/yesod-haskell/skills/design-doc/: SKILL.md
Web/yesod-haskell/skills/impact-analysis/: SKILL.md
Web/yesod-haskell/skills/new-handler/: SKILL.md
Web/yesod-haskell/skills/new-model/: SKILL.md
Web/yesod-haskell/skills/new-service/: SKILL.md
Web/yesod-haskell/src/: Application.hs  Foundation.hs  Import.hs  Model.hs  Settings.hs
Web/yesod-haskell/src/Handler/: ApiComment.hs  ApiPost.hs  Auth.hs  Comment.hs  Home.hs  Post.hs
Web/yesod-haskell/src/Service/: AuthService.hs  CommentService.hs  PostService.hs
Web/yesod-haskell/templates/: default-layout.hamlet  home.hamlet
Web/yesod-haskell/templates/auth/: login.hamlet  register.hamlet
Web/yesod-haskell/templates/post/: detail.hamlet  form.hamlet  list.hamlet
Web/yesod-haskell/test/: Spec.hs  TestFoundation.hs
Web/yesod-haskell/test/Integration/: ApiHandlerSpec.hs  CommentServiceSpec.hs  PostServiceSpec.hs
Web/yesod-haskell/test/Unit/: ApiCommentHelperSpec.hs  ApiPostHelperSpec.hs  AuthServiceSpec.hs
(+500 files in other folders)
