cabal-version:   3.0
name:            luck-backend
version:         0.1.0.0
synopsis:        운을 부르는 실천 체크리스트 백엔드 (Servant)
license:         MIT
build-type:      Simple
-- migrations/*.sql 는 Luck.DB 에서 file-embed 의 $(embedFile ...) 로 컴파일 타임에
-- 바이너리에 내장된다. `cabal install` 은 sdist 로 빌드하므로, 여기에 선언하지 않으면
-- sdist 에 포함되지 않아 "migrations/0001_init.sql: does not exist" 로 빌드가 실패한다.
extra-source-files:
    migrations/*.sql

common common-options
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat -Widentities
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wredundant-constraints
  default-extensions:
    OverloadedStrings
    DataKinds
    TypeOperators
    DeriveGeneric
    DerivingStrategies
    RecordWildCards
    DuplicateRecordFields
    OverloadedRecordDot
    LambdaCase

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Luck.Config
    Luck.Types.Common
    Luck.Types.Auth
    Luck.Types.User
    Luck.Types.Record
    Luck.Types.Checklist
    Luck.Error
    Luck.Domain.Checklist
    Luck.Domain.Record
    Luck.Domain.Validation
    Luck.DB
    Luck.Repository.User
    Luck.Repository.Record
    Luck.Repository.Checklist
    Luck.Repository.Verification
    Luck.Authz
    Luck.Web.Error
    Luck.Web.Dto
    Luck.Web.Middleware
    Luck.Auth
    Luck.Api
    Luck.Handler.Util
    Luck.Handler.Auth
    Luck.Handler.Profile
    Luck.Handler.Record
    Luck.Handler.Admin
    Luck.Server
    Luck.App
  build-depends:
    , base                 >= 4.17 && < 5
    , text
    , bytestring
    , aeson
    , time
    , uuid
    , uuid-types
    , mtl
    , transformers
    , containers
    , file-embed
    , servant
    , servant-server
    , servant-auth
    , servant-auth-server
    , jose
    , warp
    , wai
    , wai-cors
    , http-types
    , postgresql-simple
    , resource-pool
    , bcrypt
    , crypton
    , memory

executable luck-backend
  import:          common-options
  hs-source-dirs:  app
  main-is:         Main.hs
  build-depends:
    , base          >= 4.17 && < 5
    , luck-backend
    , warp
    , wai
    , wai-app-static
    , wai-cors
    , filepath
    , http-types
    , servant
    , servant-server
    , servant-auth-server
  ghc-options:     -threaded -rtsopts -with-rtsopts=-N
